nohup.out
   Compiling uuid v0.8.2
   Compiling flyer-rs v0.1.0 (/Users/base_camp/Developer/PhD/Research/FlyerEnv/pyflyer-rs/flyer-rs)
error: unknown start of token: \
 --> src/world/mod.rs:1:1
  |
1 | \pub mod asset;
  | ^

error[E0432]: unresolved import `crate::world::camera`
  --> src/rendering/renderer.rs:12:19
   |
12 | use crate::world::camera::Camera;
   |                   ^^^^^^ could not find `camera` in `world`

error[E0432]: unresolved import `crate::world::camera`
 --> src/rendering/terrain_renderer.rs:5:19
  |
5 | use crate::world::camera::Camera;
  |                   ^^^^^^ could not find `camera` in `world`

error[E0432]: unresolved import `crate::world::camera`
  --> src/rendering/vehicle_renderer.rs:11:19
   |
11 | use crate::world::camera::Camera;
   |                   ^^^^^^ could not find `camera` in `world`

error[E0432]: unresolved import `crate::vehicles::traits`
 --> src/world/core/state.rs:9:22
  |
9 | use crate::vehicles::traits::Vehicle;
  |                      ^^^^^^ could not find `traits` in `vehicles`

error[E0432]: unresolved imports `vehicles::aircraft::AircraftControls`, `vehicles::traits`
  --> src/lib.rs:28:32
   |
28 |     aircraft::{AircraftConfig, AircraftControls, AircraftState},
   |                                ^^^^^^^^^^^^^^^^
   |                                |
   |                                no `AircraftControls` in `vehicles::aircraft`
   |                                help: a similar name exists in the module: `AircraftConfig`
29 |     traits::{Controls, Vehicle, VehicleState},
   |     ^^^^^^ could not find `traits` in `vehicles`
   |
note: struct `crate::vehicles::aircraft::state::AircraftControls` exists but is inaccessible
  --> src/vehicles/aircraft/state.rs:17:1
   |
17 | pub struct AircraftControls {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not accessible

error[E0433]: failed to resolve: unresolved import
 --> src/world/core/state.rs:7:12
  |
7 | use crate::systems::camera::Camera;
  |            ^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `world::systems`

error[E0432]: unresolved imports `world::settings`, `world::state`, `world::traits`
  --> src/lib.rs:33:5
   |
33 |     settings::SimulationSettings,
   |     ^^^^^^^^ could not find `settings` in `world`
34 |     state::WorldState,
   |     ^^^^^ could not find `state` in `world`
35 |     traits::{World, WorldSettings},
   |     ^^^^^^ could not find `traits` in `world`

error[E0412]: cannot find type `Result` in module `crate::utils::errors`
  --> src/world/core/mod.rs:13:60
   |
13 |     fn update(&mut self, dt: f64) -> crate::utils::errors::Result<()>;
   |                                                            ^^^^^^ not found in `crate::utils::errors`
   |
help: consider importing one of these items
   |
4  + use std::fmt::Result;
   |
4  + use std::io::Result;
   |
4  + use std::result::Result;
   |
4  + use std::thread::Result;
   |
     and 4 other candidates
help: if you import `Result`, refer to it directly
   |
13 -     fn update(&mut self, dt: f64) -> crate::utils::errors::Result<()>;
13 +     fn update(&mut self, dt: f64) -> Result<()>;
   |

error[E0412]: cannot find type `Result` in module `crate::utils::errors`
  --> src/world/core/mod.rs:22:32
   |
22 |     ) -> crate::utils::errors::Result<()>;
   |                                ^^^^^^ not found in `crate::utils::errors`
   |
help: consider importing one of these items
   |
4  + use std::fmt::Result;
   |
4  + use std::io::Result;
   |
4  + use std::result::Result;
   |
4  + use std::thread::Result;
   |
     and 4 other candidates
help: if you import `Result`, refer to it directly
   |
22 -     ) -> crate::utils::errors::Result<()>;
22 +     ) -> Result<()>;
   |

warning: unused imports: `NoiseFn` and `OpenSimplex`
 --> src/environment/terrain/generator.rs:4:13
  |
4 | use noise::{NoiseFn, OpenSimplex};
  |             ^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Transform`
 --> src/rendering/vehicle_renderer.rs:2:16
  |
2 | use nalgebra::{Transform, Vector3};
  |                ^^^^^^^^^

warning: unused import: `LoadableAsset`
 --> src/world/systems/terrain.rs:4:41
  |
4 | use crate::world::asset::{AssetManager, LoadableAsset};
  |                                         ^^^^^^^^^^^^^

Some errors have detailed explanations: E0412, E0432, E0433.
For more information about an error, try `rustc --explain E0412`.
warning: `flyer-rs` (lib) generated 3 warnings
error: could not compile `flyer-rs` (lib) due to 10 previous errors; 3 warnings emitted
